styles/styles.css
:root {
    --mobile-nav-width: min(55vw, 250px);
    --btn-1-color: #fc851e;
    --btn-2-color: #fc851e;
    --gray-font-color: #666666;
}

/* FONT FAMILY FOR ALL TEXT */

* {
    font-family: 'Source Sans 3', 'Times New Roman', Times, serif;
}

body {
    background-color: #aaa;
}

@media screen and (max-width: 63.063em) {
    .overflow-body--hidden {
        overflow: hidden;
    }
}

.page-wrapper {
    height: 100dvh;
}

main {
    max-width: 75em;
    margin: 0 auto;
}

/*  
======================================
            	HEADER               
======================================
*/

.header-wrapper {
    max-width: 100%;
    background-color: black;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 75em;
    position: sticky;
    top: 0;
    padding: 12px;
    margin: 0 auto;
    z-index: 10;

    & .audioengine-logo {
        width: min(47vw, 222px);
    }
}

@media screen and (min-width: 63.125em) {
    header {
        padding: 15px 20px;
    }
}

/*  
======================================
           DESKTOP NAV MENUS         
======================================
*/

/* STYLES FOR DESKTOP NAV */

.desktop-nav-menu {
    display: none;
    margin-left: auto;
    padding: 0 48px;
}

@media screen and (min-width: 63.125em) {
    .desktop-nav-menu {
        display: block;
    }
}

.desktop-nav-menu ul {
    display: flex;
    gap: 2.8rem;
    list-style-type: none;

    & a {
        color: white;
        text-decoration: none;
        text-transform: uppercase;
        font-size: 1.2rem;
    }
}

/*  
======================================
           MOBILE NAV MENUS         
======================================
*/

/* STYLES FOR MOBILE NAV OVERLAY */

.mobile-nav-overlay {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(104, 104, 104, 0.8);
    width: 100%;
    height: 100vh;
}

.mobile-nav-overlay--display-block {
    display: block;
}

.close-x-icon {
    position: absolute;
    right: 24px;
    top: 24px;
    width: 2rem;
}

/* STYLES FOR MOBILE NAV */

.hamburger-menu {
    width: min(2.5rem, 9vw);
}

@media screen and (min-width: 63.125em) {
    .hamburger-menu {
        display: none;
    }
}

.mobile-nav-menu {
    position: absolute;
    top: 0;
    left: calc(-176px - var(--mobile-nav-width));
    width: var(--mobile-nav-width);
    height: 100vh;
    background-color: black;
    border: 2px solid white;
    z-index: 100;
    transition: left 0.3s ease-in-out;
}

.mobile-nav-menu--open {
    left: 0;
}

@media screen and (min-width: 63.125em) {
    .hamburger-menu,
    .mobile-nav-overlay,
    .mobile-nav-menu {
        display: none;
    }
}

/* STYLES FOR MOBILE NAV ul, li AND a TAGS */

.mobile-nav-menu ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    height: 300px;

    & li {
        height: 100%;
        border-bottom: 2px solid white;
    }

    & a {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
        color: white;
        text-decoration: none;
        text-transform: uppercase;
    }
}

/*  
======================================
            HEADER ICONS         
======================================
*/

.icons-container {
    display: flex;
    align-items: center;
    gap: min(1.5rem, 3.5vw);

    & img {
        width: min(1.5rem, 5vw);
    }

    & img:last-child {
        width: min(1.8rem, 6vw);
    }
}

@media screen and (min-width: 63.125em) {
    .icons-container {
        gap: 0.8em;

        & img {
            width: 1rem;
        }

        & img:last-child {
            width: 1.3rem;
        }
    }
}

/*  
======================================
             MAIN SECTIONS         
======================================
*/

/*  
======================================
             HERO SECTION         
======================================
*/

/* STYLES AUDIO HERO IMAGE */

.audioengine-hero {
    position: relative;
    height: 1080px;
    width: 100%;
}

.audioengine-hero::before {
    content: '';
    background-image: url('../images/banner/banner-01-speaker-black.jpg');
    background-repeat: no-repeat;
    background-size: contain;
    position: absolute;
    inset: 0;
    z-index: -1;
}

/* STYLES AUDIO HERO IMAGE CARD */

.audioengine-hero-card::before {
    content: '';
    background-color: white;
    background-repeat: no-repeat;
    background-size: contain;
    opacity: 0.7;
    position: absolute;
    inset: 0;
    z-index: -1;
}

.audioengine-hero-card {
    position: absolute;
    right: 0;
    top: min(2.7vw, 2rem);
    padding-top: clamp(5px, 4vw, 16px);
    padding-left: clamp(24px, 4vw, 32px);
    width: min(65vw, 37.5rem);
    height: min(38vw, 19.3rem);
    height: clamp(5rem, 38vw, 19.3rem);

    > *:not(:first-child) {
        margin-bottom: min(2.3vw, 1.7rem);
    }

    & h1 {
        font-size: min(6vw, 3.7rem);
    }

    & h1,
    p {
        color: var(--gray-font-color);
    }

    & h1,
    a {
        text-transform: uppercase;
    }

    & p {
        font-weight: 300;
        font-size: min(5.2vw, 3.1rem);
        line-height: 1.05;
    }

    & a {
        align-self: flex-start;
        text-decoration: none;
        color: #ffffffe6;
        background-color: var(--btn-1-color);
        border: none;
        border-radius: 5px;
        padding: min(1vw, 8px) min(2vw, 23px);
        font-size: min(2.5vw, 1.1rem);
    }
}

